# rib

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  ElapsedTimer.hpp  Operators.hpp  Optional.hpp  Reference.hpp  UniqueType.hpp  algorithm_util.hpp  functional_util.hpp  include_test.cpp  rib.code-workspace
Container/: Expected.hpp  Optional.hpp
Dimension/: Dimension.hpp  Quantity.hpp
Iterator/: MaybeIterator.hpp
Math/: Interpolation.hpp  Taylor.hpp
Mixin/: CopyMoveTrait.hpp  NullableAccepter.hpp  Operators.hpp
Traits/: FuncTraits.hpp  TypeTraits.hpp
Type/: TypeSequence.hpp  TypeSet.hpp  TypeTraits.hpp  TypeUtil.hpp  TypeVector.hpp
Units/: DimensionLessFunc.hpp  Quantity.hpp
Units/Dimension/: Basic.hpp  Frequency.hpp
Utils/: CompareCat.hpp
include/rib/: ElapsedTimer.hpp
include/rib/Algorithm/: SortingNetWork.hpp  algorithm_util.hpp
include/rib/Container/: Expected.hpp  MaybeRange.hpp  Optional.hpp  StaticFlatMap.hpp  UniqPtrVector.hpp
include/rib/DigitalFilter/: MedianFilter.hpp
include/rib/Iterator/: MaybeIteratible.hpp  MaybeIterator.hpp  ReinterpretIterator.hpp
include/rib/Math/: Angle.hpp  Constant.hpp  LookUpTable.hpp  NumericAnalysis.hpp  Taylor.hpp
include/rib/Mixin/: CopyMoveTrait.hpp  MaybeIterable.hpp  MaybeIteratible.hpp
include/rib/Monad/: Expected.hpp  MaybeAdapter.hpp
include/rib/Number/: Algebra.hpp
include/rib/Serialize/: Serialize.hpp
include/rib/Traits/: FuncTraits.hpp  TypeTraits.hpp
include/rib/Type/: TypeSequence.hpp  UniqueType.hpp
include/rib/Units/Dimension/: Dimension.hpp  Electric.hpp  Geometria.hpp  Kinematics.hpp
include/rib/Utils/: Lambda.hpp  NoizyObject.hpp  Reference.hpp  splitString.hpp
tests/: include_test.cpp
tests/Container-tests/: CMakeLists.txt
tests/Container-tests/Expected-tests/: CMakeLists.txt  Expected-tests.cpp
tests/Container-tests/MaybeRange-tests/: MaybeRange-tests.cpp
tests/Container-tests/Optional-tests/: Optional-tests.cpp
tests/Container-tests/StaticFlatMap-tests/: CMakeLists.txt  StaticFlatMap-tests.cpp
tests/Expected-tests/: Expected-tests.cpp
tests/Math-tests/: CMakeLists.txt
tests/Math-tests/NumericAnalysis-tests/: CMakeLists.txt  NumericAnalysis-tests.cpp
tests/Math-tests/Taylor-tests/: CMakeLists.txt  Taylor-tests.cpp
tests/MaybeRange-tests/: CMakeLists.txt
tests/Monad-tests/: CMakeLists.txt
tests/Monad-tests/Expected-tests/: CMakeLists.txt  Expected-tests.cpp
tests/Monad-tests/MaybeAdapter-tests/: CMakeLists.txt  MaybeAdapter-tests.cpp
tests/Optional-tests/: CMakeLists.txt
tests/UniqPtrVector-tests/: CMakeLists.txt  UniqPtrVector-tests.cpp
tests/Utils-tests/: CMakeLists.txt
tests/Utils-tests/splitString-tests/: CMakeLists.txt  splitString-tests.cpp
tests/test_include/: test_util.hpp
